# skbuild-boost-python

./: CMakeLists.txt  boo  setup.py
hello/: __main__.py
hello/cpp/: CMakeLists.txt  _cpp_module.cpp
